--- a/menudrawer/src/main/res/values/styles.xml
+++ b/menudrawer/src/main/res/values/styles.xml
@@ -1,11 +1,22 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
+    <style name="actionbar" parent="ThemeOverlay.MaterialComponents.Toolbar.Primary">
+    <item name="background">@color/teal_200</item>
+    <item name="backgroundColor">@color/black</item>
+    <item name="titleTextColor">@color/white</item>
+    <item name="android:gravity">center</item>
+    <item name="android:textColor">@color/black</item>
+    <item name="navigationIconTint">@color/white</item>
+    <item name="elevation">50dp</item>
+    </style>
 </resources>
