--- a/custom_action_bar/src/main/res/layout/activity_main.xml
+++ b/custom_action_bar/src/main/res/layout/activity_main.xml
@@ -8,14 +8,16 @@
     tools:context=".MainActivity">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/black">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/topAppBar"
