--- a/menudrawer/src/main/res/layout/activity_main_drawer.xml
+++ b/menudrawer/src/main/res/layout/activity_main_drawer.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_drawer_id"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:headerLayout="@layout/drawer_menu_header"
@@ -16,12 +17,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
         app:menu="@menu/drawer_menu_item"
         app:layout_constraintVertical_bias="0.0">
-
-
     </com.google.android.material.navigation.NavigationView>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
